fixed css z-index

--- a/assets/styles/inicio.css
+++ b/assets/styles/inicio.css
@@ -75,7 +75,7 @@ input:-webkit-autofill{
     justify-content: space-between;
     position: fixed;
     background-color: #232121;
-    z-index: 2;
+    z-index: 3;
 }
 
 .izquierda-head{
@@ -693,7 +693,7 @@ a:hover{
     opacity: 0;
     background-color:#121010;
     position: fixed;
-        z-index: 3;
+        z-index: 5;
         width: 100%;
         height: 100vh;
     transition: all .8s ease;
